---
title: Recognition Service Persistence (PostgreSQL + pgvector)
---
erDiagram
    TENANTS {
        uuid id PK
        varchar site_url UK
        timestamptz created_at
        timestamptz updated_at
    }

    MEDIA_IDENTITIES {
        uuid id PK
        uuid tenant_id FK
        int media_id
        text media_url
        int bbox_x
        int bbox_y
        int bbox_width
        int bbox_height
        float confidence
        vector embedding
        varchar thumbnail_url
        timestamptz created_at
        timestamptz updated_at
        int created_by_user_id
    }

    IDENTITY_CLUSTERS {
        uuid id PK
        uuid tenant_id FK
        varchar label
        uuid representative_identity_id FK
        int identity_count
        uuid roster_id
        float similarity_threshold
        varchar clustering_algorithm
        bool user_confirmed
        int confirmation_count
        varchar confirmation_source
        timestamptz created_at
        timestamptz updated_at
        int created_by_user_id
    }

    IDENTITY_MEMBERS {
        uuid id PK
        uuid tenant_id FK
        uuid cluster_id FK
        uuid identity_id FK
        float similarity
        timestamptz assigned_at
        timestamptz created_at
        int created_by_user_id
    }

    IDENTITY_CLUSTER_REPRESENTATIVES {
        uuid id PK
        uuid cluster_id FK
        uuid identity_id FK
        vector embedding
        float quality_score
        float diversity_score
        timestamptz created_at
    }

    MV_IDENTITY_CLUSTER_CENTROIDS {
        uuid cluster_id PK
        uuid tenant_id
        int member_count
        vector centroid
        timestamptz refreshed_at
    }

    IDENTITY_SCAN_JOBS {
        uuid id PK
        uuid tenant_id FK
        varchar status
        int[] media_ids
        int total_media
        int processed_media
        int identities_detected
        text error_message
        timestamptz created_at
        timestamptz started_at
        timestamptz completed_at
        int created_by_user_id
    }

    IDENTITY_CLUSTERING_JOBS {
        uuid id PK
        uuid tenant_id FK
        varchar status
        float progress
        int total_identities
        int processed_identities
        text error_message
        timestamptz created_at
        timestamptz started_at
        timestamptz completed_at
        int created_by_user_id
    }

    IDENTITY_SUGGESTIONS {
        uuid id PK
        uuid tenant_id FK
        uuid identity_id FK
        uuid suggested_cluster_id FK
        float representative_similarity
        float avg_member_similarity
        float confidence_score
        int priority
        varchar resolution
        timestamptz created_at
        timestamptz resolved_at
    }

    TENANTS ||--o{ MEDIA_IDENTITIES : "owns"
    TENANTS ||--o{ IDENTITY_CLUSTERS : "owns"
    TENANTS ||--o{ IDENTITY_SUGGESTIONS : "owns"
    TENANTS ||--o{ IDENTITY_SCAN_JOBS : "owns"
    TENANTS ||--o{ IDENTITY_CLUSTERING_JOBS : "owns"

    IDENTITY_CLUSTERS ||--o{ IDENTITY_MEMBERS : "contains"
    IDENTITY_CLUSTERS ||--o{ IDENTITY_CLUSTER_REPRESENTATIVES : "has reps"
    IDENTITY_CLUSTERS ||--|| MV_IDENTITY_CLUSTER_CENTROIDS : "summarized_by"
    IDENTITY_CLUSTERS ||--o| MEDIA_IDENTITIES : "representative_identity"

    MEDIA_IDENTITIES ||--o| IDENTITY_MEMBERS : "member"
    MEDIA_IDENTITIES ||--o| IDENTITY_CLUSTER_REPRESENTATIVES : "represents"
    MEDIA_IDENTITIES ||--o{ IDENTITY_SUGGESTIONS : "candidate_for"
    IDENTITY_CLUSTERS ||--o{ IDENTITY_SUGGESTIONS : "suggested_target"
